--- a/source/styles/elixirconf.scss
+++ b/source/styles/elixirconf.scss
@@ -31,6 +31,9 @@
 @import 'modules/refill.hero';
 @import 'modules/module.infobar';
 @import 'modules/module.speakers';
+@import 'modules/module.not-a-table';
+@import 'modules/module.sponsors';
+@import 'modules/module.about';
 @import 'modules/module.modal';
 @import 'modules/helpers';
 
