--- a/source/styles/modules/_module.about.scss
+++ b/source/styles/modules/_module.about.scss
@@ -5,7 +5,9 @@
     border-bottom : 1px solid #e0e0e0;
     margin-top : em(54);
     margin-bottom : em(54);
+    padding-right : em(18);
     padding-bottom : em(54);
+    padding-left : em(18);
 
     &:last-of-type {
       border-bottom-width : 0;
